--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <!-- IE Fix for HTML5 Tags -->
 <!--[if lt IE 9]>
-<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+<script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
 
 
@@ -91,7 +91,7 @@
 <link rel="pingback" href="https://www.offendersupervision.eu/xmlrpc.php">
 
 <!-- Social -->
-<script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
+<script type="text/javascript" src="https://platform.twitter.com/widgets.js"></script>
 <script type="text/javascript" src="https://apis.google.com/js/plusone.js"></script>
 
 <!-- Google Fonts -->
