updated twitter link

--- a/experiencing-supervision.html
+++ b/experiencing-supervision.html
@@ -52,7 +52,7 @@
 <link rel="pingback" href="https://www.offendersupervision.eu/xmlrpc.php">
 
 <!-- Social -->
-<script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
+<script type="text/javascript" src="https://platform.twitter.com/widgets.js"></script>
 <script type="text/javascript" src="https://apis.google.com/js/plusone.js"></script>
 
 <!-- Google Fonts -->
